# openpriors

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
db/: schema.sql
db/migrations/: 20260321_security_hardening.sql  20260322_logprob_posteriors.sql
docs/: health.md  infrastructure.md
scripts/: push_main.sh  sync_main.sh
src/: auth.rs  config.rs  credits.rs  db.rs  diagnostics.rs  error.rs  judgement_observer.rs  lib.rs  main.rs  metering.rs  pg_cache.rs  posterior.rs
src/routes/: attributes.rs  auth.rs  entities.rs  health.rs  judge.rs  mod.rs  pages.rs  rate.rs  scores.rs
