[package]
name = "openpriors"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "High-throughput structured LLM judgements. Rate any entity by any attribute. Propagate everywhere."
repository = "https://github.com/XyraSinclair/openpriors"

[dependencies]
axum = { version = "0.8", features = ["json"] }
# Path dep until cardinal-harness publishes rusqlite as optional on GitHub.
# Once pushed: cardinal-harness = { git = "https://github.com/XyraSinclair/cardinal-harness", default-features = false }
cardinal-harness = { path = "../cardinal-harness", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
blake3 = "1"
thiserror = "2"
